# Cam-live-streaming-on-MacOS

./: .gitignore  CMakeLists.txt  README.md
src/player/: ts_player.cpp  ts_player.hpp  ts_player_main.cpp
src/receiver/: main.c  main.cpp  video_receiver.c  video_receiver.cpp  video_receiver.h
src/sender/: camera_sender.c  camera_sender.cpp  camera_sender.h  main.c  main.cpp
